# Il2CppAPI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
.github/workflows/: build.yml
include/: Il2CppAPI.h
include/Unity/: Quaternion.h  Unity.h  Vector2.h
src/: Il2CppAPI.cpp  UnityEngine.cpp
src/Unity/: Quaternion.cpp  Unity.cpp  Vector2.cpp  Vector3.cpp
src/unity/: Vector3.cpp  Vector3.h
